--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ body {
 <body>
     <div class="wrapper">
         <div class="center">
-            <p>Вам есть 18 лет?</p>
-            <a class="" href="https://www.amazon.com/Diesel-Chief-Quartz-Stainless-Chronograph/dp/B00HRB8AX4?pf_rd_p=bd8d012b-e231-468e-a365-e42e25a5b501&amp;pd_rd_wg=UjiGN&amp;pf_rd_r=30CFKJ7BHZYQEE66PGGR&amp;ref_%20=%20pd_gw_unk&amp;pd_rd_w=ySfwr&amp;pd_rd_r=db8a87fc-07d1-4678-9b5e-69b04541b0c0">Нет</a>
-            <a class="" id="link">Да,мне есть 18</a>
+            <p>Visitar el sitio web oficial?</p>
+            <a class="" href="https://www.amazon.com/Diesel-Chief-Quartz-Stainless-Chronograph/dp/B00HRB8AX4?pf_rd_p=bd8d012b-e231-468e-a365-e42e25a5b501&amp;pd_rd_wg=UjiGN&amp;pf_rd_r=30CFKJ7BHZYQEE66PGGR&amp;ref_%20=%20pd_gw_unk&amp;pd_rd_w=ySfwr&amp;pd_rd_r=db8a87fc-07d1-4678-9b5e-69b04541b0c0">No</a>
+            <a class="" id="link">Si</a>
             
         </div>
     </div>
