--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Подтверждение возраста</title>
+    <title>Visite el sitio web oficial</title>
     <link rel="stylesheet" href="main.css">
 	<style>
 body {
