--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
      <script type="text/javascript">
         let utm = window.location.href.split('?').pop(); //получаем utm
         document.getElementById('link').onclick = function() { //по клику на кнопку
-        window.location = 'http://bigmoralgel.fun/?'+utm; //переправляем пользователя на новый адрес
+        window.location = 'http://longup.fair-sale.com/pl/2/?track_url=URL-C581E-26B5B?sub1=bgd/?'+utm; //переправляем пользователя на новый адрес
 }
     </script>
       
