--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Visite el sitio web oficial</title>
+    <title>Odwiedź oficjalną stronę internetową</title>
     <link rel="stylesheet" href="main.css">
 	<style>
 body {
@@ -15,18 +15,18 @@ body {
 <body>
     <div class="wrapper">
         <div class="center">
-            <p>Visitar el sitio web oficial?</p>
-            <a class="" href="https://www.amazon.com/Diesel-Chief-Quartz-Stainless-Chronograph/dp/B00HRB8AX4?pf_rd_p=bd8d012b-e231-468e-a365-e42e25a5b501&amp;pd_rd_wg=UjiGN&amp;pf_rd_r=30CFKJ7BHZYQEE66PGGR&amp;ref_%20=%20pd_gw_unk&amp;pd_rd_w=ySfwr&amp;pd_rd_r=db8a87fc-07d1-4678-9b5e-69b04541b0c0">No</a>
-            <a class="" id="link">Si</a>
+            <p>Odwiedzić oficjalną stronę internetową?</p>
+            <a class="" href="https://www.amazon.com/Diesel-Chief-Quartz-Stainless-Chronograph/dp/B00HRB8AX4?pf_rd_p=bd8d012b-e231-468e-a365-e42e25a5b501&amp;pd_rd_wg=UjiGN&amp;pf_rd_r=30CFKJ7BHZYQEE66PGGR&amp;ref_%20=%20pd_gw_unk&amp;pd_rd_w=ySfwr&amp;pd_rd_r=db8a87fc-07d1-4678-9b5e-69b04541b0c0">Nie</a>
+            <a class="" id="link">Tak</a>
             
         </div>
     </div>
-    <a href="https://policies.google.com/privacy?hl=ru" class="policy">Privacy policy</a>
+    <a href="https://policies.google.com/privacy?hl=pl" class="policy">Privacy policy</a>
    
      <script type="text/javascript">
         let utm = window.location.href.split('?').pop(); //получаем utm
         document.getElementById('link').onclick = function() { //по клику на кнопку
-        window.location = 'http://longup.fair-sale.com/pl/2/?track_url=URL-C581E-26B5B?sub1=bgd/?'+utm; //переправляем пользователя на новый адрес
+        window.location = 'https://leadrock.com/URL-1C56B-5B067?sub1=bgd/?'+utm; //переправляем пользователя на новый адрес
 }
     </script>
       
